force-app/main/default/objects/PWChrono_Request_Comment__c/PWChrono_Request_Comment__c.object-meta.xml
<CustomObject>
    <description
  >Shared request comments and system history events for request-based modules.</description>
    <label>Request Comment</label>
    <nameField>
        <displayFormat>RCM-{00000}</displayFormat>
        <label>Request Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>