force-app/main/default/objects/PWChrono_Request_Comment__c/fields/Author_Employee__c.field-meta.xml
<CustomField>
    <fullName>Author_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Request Comments</relationshipLabel>
    <relationshipName>Request_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>